[package]
name = "incron"
version = "0.1.0"
edition = "2021"
description = "Inspired by incron. You can configure to run scripts based on changes inside a directory"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
daemonize = "0.4.1"
futures = "0.3.26"
home = "0.5.4"
inotify = "0.10.0"
nix = "0.26.2"
notify = { version = "5.1.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
toml = "0.7.2"
